bdr.BDR.scala.error
Compilation error:
BDR:4: error: identifier expected but string literal found.
    if(litMessage(): String == "R"){
                               ^BDR:41: error: ')' expected but '}' found.
  } else {
  ^